--- a/{{ cookiecutter.project_slug }}/backend/requirements.txt
+++ b/{{ cookiecutter.project_slug }}/backend/requirements.txt
@@ -1,8 +1,15 @@
+amqp==5.3.1
 annotated-doc==0.0.3
 annotated-types==0.7.0
 anyio==4.11.0
+billiard==4.2.2
+celery==5.5.3
 certifi==2025.10.5
+cffi==2.0.0
 click==8.3.0
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
 dnspython==2.8.0
 email-validator==2.3.0
 fastapi==0.120.1
@@ -14,28 +21,38 @@ httptools==0.7.1
 httpx==0.28.1
 idna==3.11
 Jinja2==3.1.6
+kombu==5.5.4
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
+packaging==25.0
+prompt_toolkit==3.0.52
+pycparser==2.23
 pydantic==2.12.3
 pydantic-settings==2.11.0
 pydantic_core==2.41.4
 Pygments==2.19.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 python-multipart==0.0.20
 PyYAML==6.0.3
+rabbitmq==0.2.0
 rich==14.2.0
 rich-toolkit==0.15.1
 rignore==0.7.1
 sentry-sdk==2.42.1
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 starlette==0.49.1
 typer==0.20.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzdata==2025.2
 urllib3==2.5.0
 uvicorn==0.38.0
 uvloop==0.22.1
+vine==5.1.0
 watchfiles==1.1.1
+wcwidth==0.2.14
 websockets==15.0.1
