--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
 {% if cookicutter.use_celery == 'y' %}
-RABBITMQ_USER=guest
-RABBITMQ_PASS=guest
+# RabbitMQ
+RABBITMQ_USER=user
+RABBITMQ_PASS=password
+
+# Celery
+CELERY_BROKER_URL=amqp://user:password@rabbitmq:5672//
+CELERY_BACKEND_URL=redis://redis:6379/0
 {% endif %}
