--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
+# Python virtual environment
 .venv/
+venv/
+*.pyc
+__pycache__/
+
+# Go binary
+fastapi-generator
+*.exe
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Cookiecutter config cache
+.cookiecutter/
+.cookiecutterrc
